<resources>
    <string name="app_name">Pizza House</string>
    <string name="admin_editprofile">Edit Profile</string>
    <string name="admin_logout">Logout</string>
    <string name="meat_supreme">Meat Supreme</string>
    <string name="super_hawaiian">Super Hawaiian</string>
    <string name="veggie">Veggie</string>
    <string name="mediterranean">Mediterranean</string>
    <string name="cheddar_supreme">Cheddar Supreme</string>
    <string name="please_choose_pizza_type">Please select pizza type</string>
    <string name="please_choose_pizza_toppings">Choose pizza toppings</string>
    <string name="please_proceed_to_checkout">Proceed to Checkout</string>
    <string name="please_confirm_your_order">Confirm Your Order</string>
    <string name="please_choose_your_pizza_from_the_menu">Please choose your pizza from the menu</string>
    <string name="app_logo">app_logo</string>
    <string name="menu_icon">menu-icon</string>
    <string name="bt_receipt_download">Receipt Download</string>
    <string name="rb_small">Small ($14)</string>
    <string name="rb_medium">Medium ($18)</string>
    <string name="rb_large">Large ($20)</string>
    <string name="rb_extra_large">Extra-Large ($24)</string>
    <string name="splash_screen">splash-screen</string>
    <string name="toppings_cheese">Cheese (+$1)</string>
    <string name="toppings_greenpepper">Green Pepper</string>
    <string name="toppings_smokedham">Smoked Ham (+$4)</string>
    <string name="toppings_spinach">Spinach</string>
    <string name="toppings_blackolives">Black Olives</string>
    <string name="btn_next">Next</string>
    <string name="hyperlink">Click here to check our stores</string>
    <string name="tv_full_name">Full Name:</string>
    <string name="store_locations">Store Locations</string>
    <string name="smap">Stores in your location</string>
    <string name="edit_profile">Profile</string>
    <string name="admin_dashboard">Admin Dashboard</string>
    <string name="order_total_cost">Total Cost</string>
    <string name="switch_button">Completed</string>
    <string name="user_signup">Login Register</string>
    <string name="user_login">Login</string>
    <string-array name="cities_name">
        <item>Austin</item>
        <item>Dallas</item>
        <item>San Antonio</item>
        <item>Boston</item>
        <item>Houston</item>
    </string-array>
    <string-array name="payment_cardtype">
        <item>Visa</item>
        <item>Master</item>
        <item>Mestro</item>
    </string-array>
    <string-array name="user_type">
        <item>customer</item>
        <item>admin</item>
    </string-array>
    <string name="title_activity_pizza_stores">Map</string>
    <string name="title_activity_pizza_stores_map">Map</string>
    <string name="map_type_default">Standard View</string>
    <string name="map_type_satellite">Satellite View</string>
    <string name="title_activity_admin_home">AdminHomeActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="update_user_name">First name</string>
    <string name="update_user_lastname">Last name</string>
    <string name="update_user_password">Password</string>
    <string name="update_user_username">Username</string>
    <string name="update_user_cutomer_fullname">Full name</string>
    <string name="update_user_pizzesize">Size of Pizza</string>
    <string name="update_user_pizzetopping">Toppings</string>
    <string name="update_user_address">Address</string>
    <string name="customer_mobileno">Mobile no</string>
    <string name="customer_cardexpiry">CardExpiry</string>
    <string name="customer_personalinformation">Personal Information</string>
    <string name="customer_cardtype">CardType</string>
    <string name="customer_address">Address</string>
    <string name="customer_cardno">Card No</string>
    <string name="cutomer_postalcode">Postal code</string>
    <string name="update_contextmenuetext">Select Pizza from Context Menu</string>
    <string name="update_profile_button">Update profile</string>
    <string name="cutomer_place_pizza_order">Place Order</string>
    <string name="pizza_stores">Stores</string>
    <string name="select_pizza_size">Select your pizza size</string>
    <string name="select_pizza_toppings">Select your pizza toppings</string>
    <string name="user_firstname">First name</string>
    <string name="user_lastname">Last name</string>
    <string name="user_userlogin">Username</string>
    <string name="user_password">Password</string>
    <string name="user_roletype">User Type</string>
    <string name="user_register_button">Register</string>
    <string name="splash_text">Welcome to Pizza House !</string>
    <string name="login_button">Login</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="signup_page">Signup?</string>
    <string name="login_title">User Login</string>
    <string name="orderdetails_orderid">Order Id:</string>
    <string name="orderdetails_address">Address:</string>
    <string name="sample_test">Sample Test</string>
    <string name="order_postalcode">Postal code</string>
    <string name="submit_personal_informatio">Next</string>
    <string name="customer_logout">Logout</string>
    <string name="customer_order_history">Order History</string>
    <string name="customer_pizza_store">Pizza Store</string>
    <string name="customer_update_profile">Update profile</string>
    <string name="customer_order_track_button">Track</string>
    <string name="cutomer_pizza_order_history">Your orders</string>
    <string name="title_activity_customer_order_tracking">Map</string>
    <string name="type_of_pizza_seleect">Type of Pizza:</string>
    <string name="bt_place_order">Place Order</string>
    <string name="title_update_profile">Update Profile</string>
    <string name="bt_update">Update</string>
</resources>